2006-03-30  Mo DeJong  <mdejong@users.sourceforge.net>

        * tests/tjc/tjcthread.test: Adjust TIMEOUT
        values based on how long the first compile
        takes. This keeps the tests from timing out
        too quickly on a heavily loaded system.

2006-03-27  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/Var.java: Create new
        Var flag TRACE_EXISTS and set it instead of
        NO_CACHE when traces are defined. Also, fix
        a bug in untraceVar() where deleting a trace
        should have nulled out the traces field.
        Mark resolver vars as NO_CACHE to match the
        C implementation. Check for this new
        TRACE_EXISTS flag in the resolveScalar and
        resolveArray methods. Remove questionable
        setting of Var.hashKey to null when nulling
        out a compiled local slot post unset.
        * src/tests/jacl/tcl/lang/TestVarFrameCmd.java:
        Reimplement resolve var printing so that
        the state flags are printed. This shows why
        a var can't be resolved if in fact it can't be.
        * tests/tjc/compiledLocals.test: Update
        test cases to show why resolve fails.

2006-03-27  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tclblend/tcl/lang/Interp.java (evalFile):
        Add TclBlend implementation of Interp.evalFile().
        * tests/tcljava/javaInterp.test: Removed.
        * tests/tcljava/tcljavaInterp.test: Add test
        case for Interp.evalFile() API.

2006-03-27  Mo DeJong  <mdejong@users.sourceforge.net>

        * Makefile.in: Running `make tjc2` will now
        copy the generated tjc.jar and tjcsrc.jar
        into the build dir so that they will be
        installed by `make install`. The tjc two
        stage build is now stable enough to be
        used all the time.
        * jaclsh.in: Add JAVA_FLAGS env var that
        can be set in the user env.
        * src/jacl/tcl/lang/ExprValue.java: Add